--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: easybiz_to_yayoi
 description: A new Flutter project.
-publish_to: 'none' 
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.17.0-266.5.beta <3.0.0"
-
 
 dependencies:
   flutter:
@@ -17,6 +16,7 @@ dependencies:
   csv: ^5.0.1
   cupertino_icons: ^1.0.2
   jcombu: ^1.0.1
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
@@ -24,40 +24,8 @@ dev_dependencies:
   freezed: ^2.0.2
   json_serializable: ^6.1.6
   build_runner: ^2.1.10
-  
+
   flutter_lints: ^2.0.0
 
 flutter:
- 
   uses-material-design: true
-
-  
-  
-  
-  
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
