--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,13 @@ dependencies:
 
   file_picker: ^4.5.1
   hooks_riverpod: ^1.0.3
+  flutter_hooks: ^0.18.3
   freezed_annotation: ^2.0.1
   csv: ^5.0.1
   cupertino_icons: ^1.0.2
   jcombu: ^1.0.1
   shared_preferences: ^2.0.13
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
