--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,16 +10,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-  file_picker: ^4.5.1
-  hooks_riverpod: ^1.0.3
-  flutter_hooks: ^0.18.3
+  file_picker: ^6.1.1
+  hooks_riverpod: ^2.4.9
+  flutter_hooks: ^0.20.4
   freezed_annotation: ^2.0.1
   csv: ^5.0.1
   cupertino_icons: ^1.0.2
   jcombu: ^1.0.1
   shared_preferences: ^2.0.13
-  intl: ^0.17.0
+  intl: ^0.19.0
   charset_converter: ^2.1.0
+  riverpod_annotation: ^2.3.3
 
 dev_dependencies:
   flutter_test:
@@ -28,7 +29,8 @@ dev_dependencies:
   json_serializable: ^6.1.6
   build_runner: ^2.1.10
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
+  riverpod_generator: ^2.3.9
 
 flutter:
   uses-material-design: true
